Refactor healing items configuration to include surgery and bleeding treatment options

--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,4 @@
 {
-  "carKitHP": 250,
-  "salewaHP": 450,
-  "ifakHP": 400,
-  "afakHP": 420,
-  "grizzlyHP": 2250,
-  "ai2HP": 150,
-
   "calocUsage": 5,
   "armyBandageUsage": 4,
   "analginPainkillersUsage": 10,
@@ -17,76 +10,70 @@
   "survivalKitUsage": 15,
   "cmsUsage": 10,
 
+  "grizzlyChanges": true,
+  "grizzlyHP": 2250,
   "GrizzlyCanDoSurgery": true,
   "GrizzlySurgeryCost": 550,
-
-
-
-  "recoilCrank": true,
-  "recoilDamping": 0.6,
-  "recoilHandDamping": 0.4,
-
-  "smgRecoilUp": 0.01,
-  "smgRecoilBack": 0.1,
-  "smgRecoilConvergence": 0.1,
-  "smgDispersion": 0.15,
-  "smgDampingHandRotation": 0.2,
-  "smgRecoilCamera": 0.1,
-  "smgRecoilCategoryMultiplierHandRotation": 0.3,
-  "smgRecoilStableAngleIncreaseStep": 0.1,
-
-  "pistolRecoilUp": 0.05,
-  "pistolRecoilBack": 0.1,
-  "pistolRecoilConvergence": 0.08,
-  "pistolDispersion": 0.08,
-  "pistolDampingHandRotation": 0.08,
-  "pistolRecoilCamera": 0.08,
-  "pistolRecoilCategoryMultiplierHandRotation": 0.03,
-  "pistolRecoilStableAngleIncreaseStep": 0.08,
+  "GrizzlyCanHealHeavyBleeding": true,
+  "GrizzlyHeavyBleedingHealCost": 200,
+  "GrizzlyCanHealLightBleeding": true,
+  "GrizzlyLightBleedingHealCost": 100,
+  "GrizzlyCanHealFractures": true,
+  "GrizzlyFractureHealCost": 200,
   
-  "assaultRifleRecoilUp": 0.05,
-  "assaultRifleRecoilBack": 0.1,
-  "assaultRifleRecoilConvergence": 0.2,
-  "assaultRifleDispersion": 0.28,
-  "assaultRifleDampingHandRotation": 0.25,
-  "assaultRifleRecoilCamera": 0.2,
-  "assaultRifleRecoilCategoryMultiplierHandRotation": 0.5,
-  "assaultRifleRecoilStableAngleIncreaseStep": 0.12,
+  "carKitChanges": true,
+  "carKitHP": 250,
+  "carKitCanHealFractures": true,
+  "carKitFractureHealCost": 100,
+  "carKitCanDoSurgery": true,
+  "carKitSurgeryCost": 200,
+  "carKitCanHealHeavyBleeding": true,
+  "carKitHeavyBleedingHealCost": 100,
+  "carKitCanHealLightBleeding": true,
+  "carKitLightBleedingHealCost": 50,
 
-  "machinegunRecoilUp": 0.04,
-  "machinegunRecoilBack": 0.1,
-  "machinegunRecoilConvergence": 0.2,
-  "machinegunDispersion": 0.28,
-  "machinegunDampingHandRotation": 0.25,
-  "machinegunRecoilCamera": 0.2,
-  "machinegunRecoilCategoryMultiplierHandRotation": 0.48,
-  "machinegunRecoilStableAngleIncreaseStep": 0.12,
-  
-  "sniperRifleRecoilUp": 0.14,
-  "sniperRifleRecoilBack": 0.19,
-  "sniperRifleRecoilConvergence": 0.14,
-  "sniperRifleDispersion": 0.14,
-  "sniperRifleDampingHandRotation": 0.14,
-  "sniperRifleRecoilCamera": 0.14,
-  "sniperRifleRecoilCategoryMultiplierHandRotation": 0.09,
-  "sniperRifleRecoilStableAngleIncreaseStep": 0.14,
+  "salewaChanges": true,
+  "salewaHP": 450,
+  "salewaCanHealFractures": true,
+  "salewaFractureHealCost": 100,
+  "salewaCanDoSurgery": true,
+  "salewaSurgeryCost": 400,
+  "salewaCanHealHeavyBleeding": true,
+  "salewaHeavyBleedingHealCost": 175,
+  "salewaCanHealLightBleeding": true,
+  "salewaLightBleedingHealCost": 40,
 
-  "marksmanRifleRecoilUp": 0.13,
-  "marksmanRifleRecoilBack": 0.18,
-  "marksmanRifleRecoilConvergence": 0.13,
-  "marksmanRifleDispersion": 0.13,
-  "marksmanRifleDampingHandRotation": 0.13,
-  "marksmanRifleRecoilCamera": 0.13,
-  "marksmanRifleRecoilCategoryMultiplierHandRotation": 0.08,
-  "marksmanRifleRecoilStableAngleIncreaseStep": 0.13,
-  
-  "shotgunRecoilUp": 0.05,
-  "shotgunRecoilBack": 0.1,
-  "shotgunRecoilConvergence": 0.25,
-  "shotgunDispersion": 0.2,
-  "shotgunDampingHandRotation": 0.14,
-  "shotgunRecoilCamera": 0.14,
-  "shotgunRecoilCategoryMultiplierHandRotation": 0.5,
-  "shotgunRecoilStableAngleIncreaseStep": 0.14
+  "ifakChanges": true,
+  "ifakHP": 400,
+  "ifakCanHealFractures": true,
+  "ifakFractureHealCost": 180,
+  "ifakCanDoSurgery": true,
+  "ifakSurgeryCost": 350,
+  "ifakCanHealHeavyBleeding": true,
+  "ifakHeavyBleedingHealCost": 175,
+  "ifakCanHealLightBleeding": true,
+  "ifakLightBleedingHealCost": 30,
+
+  "afakChanges": true,
+  "afakHP": 420,
+  "afakCanHealFractures": true,
+  "afakFractureHealCost": 180,
+  "afakCanDoSurgery": true,
+  "afakSurgeryCost": 370,
+  "afakCanHealHeavyBleeding": true,
+  "afakHeavyBleedingHealCost": 175,
+  "afakCanHealLightBleeding": true,
+  "afakLightBleedingHealCost": 30,
+
+  "ai2Changes": true,
+  "ai2HP": 200,
+  "ai2CanHealFractures": true,
+  "ai2FractureHealCost": 100,
+  "ai2CanDoSurgery": true,
+  "ai2SurgeryCost": 200,
+  "ai2CanHealHeavyBleeding": true,
+  "ai2HeavyBleedingHealCost": 100,
+  "ai2CanHealLightBleeding": true,
+  "ai2LightBleedingHealCost": 30
 
 }
