Format package.json for improved readability and consistency

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "license": "MIT",
     "author": "viniHNS",
     "sptVersion": "~3.10",
-	"loadBefore": [],
-	"loadAfter": [],
-	"incompatibilities": ["vinihns-makemedsgreatagain"],
-	"contributors": [],
-	"isBundleMod": false,
+    "loadBefore": [],
+    "loadAfter": [],
+    "incompatibilities": [
+        "vinihns-makemedsgreatagain"
+    ],
+    "contributors": [],
+    "isBundleMod": false,
     "scripts": {
         "setup": "npm i",
         "build": "node ./build.mjs",
